--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/data
 .idea
 .idea_modules
 /RUNNING_PID
@@ -6,7 +7,7 @@
 /project/project/
 /project/target/
 /target/
-*/target/
+/Models
 .projectFilesBackup
 *.lc
 *.lex
