--- a/saul-examples/src/main/resources/log4j.properties
+++ b/saul-examples/src/main/resources/log4j.properties
@@ -1,6 +1,5 @@
 # Root logger option
-# TODO Change this to INFO for release
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=INFO, stdout
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
